authz/allow_public.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: allow-public-access
  namespace: whoami
spec:
  selector:
    matchLabels:
      app: k8s-whoami
  action: ALLOW
  rules: 
  #  - {}
  - to:
    - operation:
        methods: ["GET"]
        paths: ["/public"]
